--- a/app/index.html
+++ b/app/index.html
@@ -1,17 +1,11 @@
 <!doctype html>
-<html lang="en" ng-app="wordrotApp">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>wordrot</title>
-    <script src="bower_components/lodash/dist/lodash.min.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
 </head>
 <body>
-     <div ng-view></div>
+    <div id="wordrot-app"></div>
+    <script data-main="app" type="text/javascript" src="lib/require.js"></script>
 </body>
 </html>
