front end events, tpls, re-org

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div id="wordrot-app"></div>
-    <script data-main="app" type="text/javascript" src="lib/require.js"></script>
+    <script data-main="main" type="text/javascript" src="lib/require.js"></script>
 </body>
 </html>
